--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -18,14 +18,17 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@payment/shared": "workspace:^",
+    "@types/react-transition-group": "^4.4.12",
     "antd": "^5.15.0",
     "axios": "^1.6.7",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.1.6",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -37,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vite-plugin-pwa": "^1.1.0"
   }
 }
