--- a/frontend/admin-portal/package.json
+++ b/frontend/admin-portal/package.json
@@ -18,18 +18,25 @@
     "@ant-design/charts": "^2.6.6",
     "@ant-design/icons": "^5.3.0",
     "@payment/shared": "workspace:^",
+    "@tanstack/react-query": "^5.90.5",
+    "ahooks": "^3.9.5",
     "antd": "^5.15.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "immer": "^10.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.1.6",
     "react-router-dom": "^6.22.0",
+    "react-window": "^2.2.1",
+    "recharts": "^3.3.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
